welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:5: error: not found: value Direction
		setDirection(Direction.WEST)
                             ^